--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,44 +5,88 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
+    android:background="@color/primaryDarkColor"
     tools:context=".LoginActivity">
+
+    <ImageView
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:src="@drawable/logo"/>
     <TextView
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/lato"
         android:text="Sign Up"
-        android:textSize="30dp"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        />
+        android:textColor="@color/white"
+        android:textSize="30sp" />
 
     <EditText
-        android:layout_marginTop="50dp"
-        android:padding="20dp"
-        android:layout_marginLeft="20dp"
-
-        android:layout_marginRight="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_ed"
         android:hint="Enter Phone Number"
         android:id="@+id/PhoneNumber"
-        />
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:paddingStart="24dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:theme="@style/PrimaryColorEditTextStyle" />
     <EditText
-        android:layout_marginTop="25dp"
-        android:padding="20dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_ed"
         android:hint="Enter Code"
         android:id="@+id/Code"
-        />
-    <Button
-        android:layout_margin="50dp"
-        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:paddingStart="24dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:theme="@style/PrimaryColorEditTextStyle" />
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send Code"
-        android:id="@+id/Verify"
-        />
+        android:layout_marginTop="50dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_circle_white"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_navigate_next_black_24dp"
+            android:tint="@color/primaryColor"
+            android:elevation="3dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/Verify"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/Verify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/bg_btn_primary"
+            android:fontFamily="@font/lato"
+            android:paddingStart="80dp"
+            android:paddingEnd="80dp"
+            android:text="Send Code"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
