--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#484848</color>
+    <color name="colorPrimaryLight">#484848</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="primaryColor">#212121</color>
+    <color name="primaryDarkColor" >#000000</color>
+    <color name="primaryLightColor">#484848</color>
+    <color name="white">#ffffff</color>
+    <color name="transparent">#00000000</color>
+    <color name="colorEditTextBg">#E7FBF7</color>
+    <color name="registerBgColor">#21254a</color>
+
+    <color name="black_txt_Color">#222426</color>
+    <color name="hint_color">#a6a6a6</color>
+    <color name="colorDivider">#aaaaaa</color>
+    <color name="white_smoke">#cccccc</color>
+    <color name="white_smoke_light">#dddddd</color>
+    <color name="geryTxt">#858585</color>
+    <color name="parent_background">#f6f6f6</color>
+    <color name="contentBadgeTitle">#a9a9a9</color>
+    <color name="contentDividerLine">#e0e0e0</color>
+    <color name="mainTextColor">#343d43</color>
 </resources>
