--- a/app/src/main/res/layout/activity_find_user.xml
+++ b/app/src/main/res/layout/activity_find_user.xml
@@ -5,19 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FindUserActivity"
+    android:background="@color/primaryDarkColor"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Contacts"
-        android:textSize="30dp"
-        android:textColor="@android:color/black"/>
+        android:padding="16dp"
+        android:gravity="center"
+        android:background="@drawable/bg_heading_primary"
+        android:fontFamily="@font/lato"
+        android:textSize="34sp"
+        android:textColor="@color/white"/>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:id="@+id/userList"
         android:scrollbars="vertical"
         />
-
 </LinearLayout>
