--- a/app/src/main/res/layout/activity_main_home_screen.xml
+++ b/app/src/main/res/layout/activity_main_home_screen.xml
@@ -4,52 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primaryDarkColor"
     tools:context=".MainHomeScreenActivity"
     android:orientation="vertical">
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+    <TextView
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Chats"
+            android:padding="16dp"
+            android:gravity="center"
+            android:background="@drawable/bg_heading_primary"
+            android:fontFamily="@font/lato"
+            android:textSize="34sp"
+            android:textColor="@color/white"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:padding="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:id="@+id/chats"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right">
+        android:padding="8dp"
+        android:weightSum="2">
         <Button
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Logout"
+            android:layout_margin="4dp"
+            android:background="@drawable/bg_btn_primary"
+            android:textColor="@color/white"
             android:id="@+id/logout"/>
 
         <Button
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_margin="4dp"
             android:id="@+id/findUser"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/bg_btn_primary"
+            android:textColor="@color/white"
             android:text="Find User"/>
 
-    </LinearLayout>
-
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-
-        <TextView
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chats"
-            android:textSize="30dp"
-            android:padding="10dp"
-            android:textColor="@android:color/black"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:padding="20dp"
-            android:id="@+id/chats"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
     </LinearLayout>
 
 
