--- a/app/src/main/res/layout/media.xml
+++ b/app/src/main/res/layout/media.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    android:paddingBottom="2dp"
+    android:paddingTop="2dp"
+    android:background="@color/primaryDarkColor"
+    >
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="100dp"
