--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,32 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    android:paddingBottom="2dp"
+    android:paddingTop="2dp"
+    android:background="@color/primaryDarkColor">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:padding="8dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/lato"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:text="Message"
             android:id="@+id/message"/>
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/lato"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:layout_marginTop="4dp"
+            android:text="Sender"
             android:id="@+id/sender"/>
 
         <View
             android:layout_width="wrap_content"
             android:layout_height="1dp"
-            android:background="@android:color/black"
-            android:layout_weight="0.8"/>
+            android:background="@color/white"
+            android:alpha="0.5"
+            android:layout_marginTop="8dp" />
     </LinearLayout>
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:text="View Media"
+        android:padding="8dp"
+        android:background="@drawable/bg_btn_primary"
+        android:textColor="@color/white"
         android:id="@+id/viewMedia"
         android:layout_weight="0.2"/>
 </LinearLayout>
