--- a/app/src/main/res/drawable-v24/bg_heading_primary.xml
+++ b/app/src/main/res/drawable-v24/bg_heading_primary.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:bottomLeftRadius="36dp" android:bottomRightRadius="36dp"/>
-    <solid android:color="@color/primaryColor"/>
+    <corners android:bottomLeftRadius="36dp" android:bottomRightRadius="36dp"
+        android:topLeftRadius="36dp" android:topRightRadius="36dp"/>
+    <solid android:color="@color/primaryLightColor"/>
 </shape>
