--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,16 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChatActivity"
-    android:background="@color/primaryDarkColor"
+    android:background="@color/white"
     android:id="@+id/relativeLayout">
 
-    <androidx.recyclerview.widget.RecyclerView
+
+    <LinearLayout
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/messages"
-        android:layout_above="@+id/chatLayout"
-        android:padding="15dp"
-        android:scrollbars="vertical"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Messages"
+            android:padding="13dp"
+            android:gravity="left"
+            android:fontFamily="@font/lato"
+            android:textSize="34sp"
+            android:textColor="@color/white"
+            android:background="@drawable/bg_circle_primary"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/messages"
+            android:layout_above="@+id/chatLayout"
+            android:padding="15dp"
+            android:scrollbars="vertical"/>
+    </LinearLayout>
 
 
 
