--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,20 +7,35 @@
     tools:context=".SplashScreen"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/primaryDarkColor">
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/logo" />
-    <TextView
+        android:src="@drawable/Logo" />
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="VisionX"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/lato"
-        android:textSize="45sp"
-        android:textColor="#FFFFFF" />
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:text="Vision"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/lato"
+            android:textSize="45sp"
+            android:textColor="@color/black_txt_Color" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="X"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/lato"
+            android:textSize="50sp"
+            android:textStyle="bold"
+            android:textColor="#d61321" />
+    </LinearLayout>
+
 </LinearLayout>
