--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/primaryDarkColor"
+    android:background="@color/white"
     android:paddingStart="8dp"
     android:paddingEnd="8dp"
     android:paddingBottom="2dp"
@@ -12,9 +12,11 @@
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:text="Title"
         android:fontFamily="@font/lato"
-        android:textSize="18sp"
-        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/primaryDarkColor"
         android:id="@+id/title"/>
 </LinearLayout>
