--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -7,8 +7,11 @@
     app:contentPadding="16dp"
     app:cardElevation="2dp"
     android:layout_margin="8dp"
-    app:cardBackgroundColor="@color/primaryColor"
-    app:cardCornerRadius="8dp">
+    android:paddingBottom="5dp"
+    app:cardBackgroundColor="@color/white_smoke"
+    app:cardCornerRadius="35dp"
+    >
+
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Name"
+            android:textStyle="bold"
             android:textSize="24sp"
             android:fontFamily="@font/lato"
             android:textColor="@color/white"
