--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -8,6 +8,10 @@
     android:paddingBottom="2dp"
     android:paddingTop="2dp"
     android:background="@color/white">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ico_usr"/>
 
     <LinearLayout
         android:layout_width="match_parent"
