--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/Logo"/>
+            android:src="@drawable/logo_re"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
