--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -13,7 +13,7 @@
         android:id="@+id/logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/Logo" />
+        android:src="@drawable/logo_re" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
