--- a/app/src/main/res/layout/media.xml
+++ b/app/src/main/res/layout/media.xml
@@ -6,7 +6,7 @@
     android:paddingEnd="8dp"
     android:paddingBottom="2dp"
     android:paddingTop="2dp"
-    android:background="@color/primaryDarkColor"
+    android:background="@color/white"
     >
     <ImageView
         android:layout_width="wrap_content"
