--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -33,7 +33,8 @@
             android:id="@+id/messages"
             android:layout_above="@+id/chatLayout"
             android:padding="15dp"
-            android:scrollbars="vertical"/>
+            android:scrollbars="vertical"
+            android:layout_marginBottom="40dp"/>
     </LinearLayout>
 
 
