--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -7,7 +7,8 @@
     android:paddingEnd="8dp"
     android:paddingBottom="2dp"
     android:paddingTop="2dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:id="@+id/messageLayout">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,13 +62,6 @@
             android:textColor="@color/white"
             android:id="@+id/viewMedia"
             android:layout_weight="0.2"/>
-        <CheckBox
-            android:layout_marginTop="5dp"
-            android:checked="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Translate"
-            android:id="@+id/translate"/>
     </LinearLayout>
 
 </LinearLayout>
